# neural-network-from-scratch

./: .gitignore  MANIFEST.in  README.MD  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
src/neural/: datasets.py  initialization.py  main.py  neural_network.py  neural_utils.py  one_layer_neural.py  provide_data.py  two_layer_neural.py
src/neural_network_from_scratch.egg-info/: PKG-INFO  SOURCES.txt
test/: test_datasets.py  test_initialization.py  test_neural_network.py  test_one_layer_neural.py  test_provide_data.py  test_two_layer_neural.py
test/data/: test_subset.csv  train_subset.csv
