[metadata]
name = neural-network-from-scratch
version = 3.11.1
packages = []
url =
license =
author = jwisskirchen
author_email =
description = Graduate Jetbrains academy Machine Learning project

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src